# Godot-BatPU-Emulator

./: .gitignore  LICENSE  PanelTheme.tres  README.md  Theme.tres  emulator.gdextension  emulator.gdextension.uid  movement.mc  project.godot
.godot/: extension_list.cfg
Fonts/: RobotoMono.ttf.import
Scripts/: AssemblyColumn.gd  AssemblyColumn.gd.uid  CodeEditor.gd  CodeEditor.gd.uid  ControllerButton.gd  ControllerButton.gd.uid  Emulator.gd  Emulator.gd.uid  Unfocus.gd  UnfocusSpinBox.gd  UnfocusSpinBox.gd.uid
Textures/: ScreenPlaceholder.png.import
Theme/: PanelTheme.tres  Theme.tres
rust/: Cargo.toml
rust/src/: instruction_array.rs  lib.rs  machine.rs  machine_node.rs
scenes/: main.tscn
textures/: flat.png.import  flat_on.png.import  icon_gone.svg.import  redstone_lamp.png.import  redstone_lamp_2x2.png.import  redstone_lamp_2x2_on.png.import  redstone_lamp_on.png.import
